docs: fixed gap between table of contents
JIRA: DP-2904

--- a/docs/assets/scss/menu.scss
+++ b/docs/assets/scss/menu.scss
@@ -53,7 +53,7 @@
 
     &__mobile-icon {
         position: fixed;
-        top: $header-first-nav-height;
+        top: $header-first-nav-height-desktop;
         display: flex;
         justify-content: center;
         align-items: center;
